# advisor-models

./: README.md  pyproject.toml
advisor_models/math/: config.py  construct_dataset.py  env.py  main_math.py
advisor_models/math_solutions/: config.py  construct_dataset.py  env.py  eval_math_solutions_model.py  main_math_solutions.py
advisor_models/mtob/: config.py  construct_dataset.py  env.py  main_mtob.py
advisor_models/reviews/: config.py  construct_dataset_length.py  construct_dataset_level.py  env_length.py  env_level.py  eval_length_model.py  eval_level_model.py  main_reviews_length.py  main_reviews_level.py
advisor_models/rule_arena/: config.py  construct_dataset.py  env.py  main_rule_arena.py
advisor_models/template/: construct_dataset.py  env.py  main_template.py
baselines/math_solutions/: correctness_baseline.py  math_solutions_baseline.py
baselines/reviews/: reviews_length_baseline.py  reviews_level_baseline.py
data/math/: train_gpt-4o-mini_1000.parquet  validation_gpt-4o-mini_500.parquet
data/math_solutions/: train.parquet  validation.parquet
data/mtob/: train.parquet  validation.parquet
data/reviews/: train_length.parquet  train_length_weak.parquet  train_level.parquet  validation_length.parquet  validation_length_weak.parquet  validation_level.parquet
data/rule_arena/: train_gpt-4.1-mini_0.parquet  validation_gpt-4.1-mini_0.parquet
scripts/: train_math_advisor.sh  train_math_solutions_advisor.sh  train_mtob_advisor.sh  train_reviews_length_advisor.sh  train_reviews_level_advisor.sh  train_rule_arena_advisor.sh
(+10 files in other folders)
